# cargo_project_template

./: LICENSE  single-core-cargo-generate-values.toml
.cargo/: cargo-generate-values.toml  cargo-generate.toml  config.toml
dual-core/: Cargo.toml  cargo-generate-values.toml  cargo-generate.toml  post-script.rhai
dual-core/.cargo/: config.toml
dual-core/shared/drivers/: Cargo.toml
dual-core/shared/drivers/src/: config.rs  drivers.rs
dual-core/shared/greeter/src/: greets.rs  lib.rs
dual-core/shared/utils/: Cargo.toml
dual-core/shared/utils/greeter/src/: greets.rs
dual-core/shared/utils/src/: calculator.rs  main.rs  utils.rs
dual-core/{{core_0}}/: Cargo.toml  build.rs  memory.x  openocd.cfg
dual-core/{{core_0}}/.cargo/: config.toml
dual-core/{{core_0}}/src/: main.rs
dual-core/{{core_1}}/: Cargo.toml  memory.x  openocd.cfg
dual-core/{{core_1}}/.cargo/: config.toml
dual-core/{{core_1}}/src/: main.rs
single-core/: Cargo.toml  cargo-generate-values.toml  cargo-generate.toml  openocd.cfg
single-core/.cargo/: config.toml
single_core_template/: cargo-generate-values.toml  cargo-generate.toml
single_core_template/template/: memory.x  openocd.cfg  testfile.txt
