[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"

[workspace]
members = [ 
    "{{core_0}}",
    "{{core_1}}",
    "shared/greeter", 
]

[profile.dev]
opt-level = 0  # No optimizations, full debug info

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
#opt-level = 3  # Full optimizations

[[bin]]
name = "{{core_0}}"
path = "core_0/src/main.rs"
#test = false
#bench = false

[[bin]]
name = "{{core_1}}"
path = "core_1/src/main.rs"
#test = false
#bench = false